update signal path, misc enhancements, update dependencies